# tpde

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  REUSE.toml  llvm.616f2b685b06.patch  llvm.86d456ad8f2a.patch  llvm.ab51eccf88f5.patch
.github/workflows/: ci.yml
.reuse/: dep5
docs/: CMakeLists.txt  Doxyfile.in  custom.css  header.html  main.md
docs/tpde/: adaptor.md  compiler-ref.md  encodegen.md  guide.md  internals-analyzer.md  internals-assembler.md  internals-flow.md  internals-regalloc.md  main.md  overview.md
docs/tpde-llvm/: main.md
tpde/: CMakeLists.txt
tpde-encodegen/: CMakeLists.txt
tpde-encodegen/src/: Target.hpp  encode_gen.cpp  encode_gen.hpp  fadecBridge.cpp  fadecBridge.hpp  fadecInfo.cpp  fadecInfo.hpp  instInfo.cpp  instInfo.hpp  inst_descs.cpp  inst_descs.hpp  llvmUtils.cpp  llvmUtils.hpp  main.cpp
tpde-encodegen/src/arm64/: EncCompilerTemplate.hpp  Target.cpp  Target.hpp
tpde-encodegen/src/x64/: EncCompilerTemplate.hpp  Target.cpp  Target.hpp
tpde-llvm/: CMakeLists.txt
tpde-llvm/include/tpde-llvm/: LLVMCompiler.hpp
tpde-llvm/src/: JITMapper.cpp  JITMapper.hpp  LLVMAdaptor.cpp  LLVMAdaptor.hpp  LLVMCompiler.cpp  LLVMCompilerBase.hpp  base.hpp  encode_template.c  encode_template.ll  main.cpp
tpde-llvm/src/arm64/: LLVMCompilerArm64.cpp  LLVMCompilerArm64.hpp  encode_compiler.hpp
tpde-llvm/src/x64/: LLVMCompilerX64.cpp  LLVMCompilerX64.hpp  enc_funcs.hpp  encode_compiler.hpp  encode_template.c
tpde-llvm/test/: lit.cfg.py  lit.site.cfg.py.in  update_tpde_llc_test_checks.py  vararg.c
tpde-llvm/test/benchmark/: README.md  call-chain.test  large-array-value.test  large-array-zeroinitializer.test  loop-nest-irreducible-allbr.test  loop-nest-irreducible-onebr.test  loop-nest-reducible-varuse1.test  loop-nest-reducible-varuse2.test  loop-nest-reducible-varuse3.test  loop-nest-reducible.test  many-funcs-section1.test  many-funcs-section2.test  many-funcs.test  many-preds.test  many-values.test  merge-calls.test  merge-no-phi.test  run.py  store-const.test  trellis2.test
tpde-llvm/test/elf/: comdat-ctor.ll  comdat.ll  ctors-dtors.ll  data-relocs.ll  global-defs.ll  intrinsic-no-symbol.ll  linkage.ll  many-sections.test  retain.ll  sections.ll  visibility.ll
tpde-llvm/test/filetest/: add-vector.ll  add.ll  alias.ll  alloca.ll  and-vector.ll  and.ll  ashr-vector.ll  ashr.ll  atomicrmw-add.ll  atomicrmw-and.ll  atomicrmw-fadd.ll  atomicrmw-fmax.ll  atomicrmw-fmin.ll  atomicrmw-fsub.ll  atomicrmw-max.ll  atomicrmw-min.ll  atomicrmw-nand.ll  atomicrmw-or.ll  atomicrmw-sub.ll  atomicrmw-umax.ll  atomicrmw-umin.ll  atomicrmw-xchg.ll  atomicrmw-xor.ll  bitcast.ll  bitcode.ll  br.ll  byval.ll  call.ll  cmpxchg.ll  constant-vectors.ll  constants.ll  ctors-dtors.ll  empty.ll  extractelement.ll  extractvalue.ll  fadd-vector.ll  fadd.ll  fcmp-fp128.ll  fcmp-fuse-br.ll  fcmp.ll  (+119 more)
tpde-llvm/test/filetest/arm64/: call.ll  inlineasm.ll  intrin_aarch64_neon_umull.ll  intrin_va_start.ll  ret-fp128.ll
tpde-llvm/test/filetest/x64/: inlineasm.ll  intrin_x86_sse2_pause.ll
tpde-llvm/test/llc/: time-trace.ll
tpde-llvm/test/lli/: basic.ll  constants.ll  exception-simple.ll  mathlib.ll  overflow_add.ll  overflow_mul.ll  overflow_sub.ll  puts.ll
tpde-llvm/tools/: tpde-llc.cpp  tpde-lli.cpp
tpde/gdb/: PrettyPrinters.py
tpde/include/tpde/: Analyzer.hpp  Assembler.hpp  AssemblerElf.hpp  AssignmentPartRef.hpp  Compiler.hpp  CompilerBase.hpp  CompilerConfig.hpp  ElfMapper.hpp  GenericValuePart.hpp  IRAdaptor.hpp  RegisterFile.hpp  ScratchReg.hpp  StringTable.hpp  ValLocalIdx.hpp  ValueAssignment.hpp  ValuePartRef.hpp  ValueRef.hpp  base.hpp
tpde/include/tpde/arm64/: AssemblerElfA64.hpp  CompilerA64.hpp
tpde/include/tpde/util/: AddressSanitizer.hpp  BumpAllocator.hpp  SegmentedVector.hpp  SmallBitSet.hpp  SmallVector.hpp  VectorWriter.hpp  function_ref.hpp  misc.hpp
tpde/include/tpde/x64/: AssemblerElfX64.hpp  CompilerX64.hpp
tpde/src/: AssemblerElf.cpp  ElfMapper.cpp  StringTable.cpp  ValueAssignment.cpp  base.cpp  main.cpp
tpde/src/arm64/: AssemblerElfA64.cpp
tpde/src/test/: TestIR.cpp  TestIR.hpp  TestIRCompiler.cpp  TestIRCompiler.hpp  TestIRCompilerA64.cpp  TestIRCompilerA64.hpp  test_main.cpp
tpde/src/util/: SmallVector.cpp
tpde/src/x64/: AssemblerElfX64.cpp
tpde/test/filetest/: lit.cfg.py  lit.site.cfg.py.in
tpde/test/filetest/analyzer/: condbr.tir  layout.tir  liveness.tir  rpo.tir
tpde/test/filetest/codegen/: add.tir  alloca.tir  br.tir  br_fixed.tir  call.tir  condselect.tir  eh-frame-arm64.tir  eh-frame-x64.tir  fixed_assignments.tir  simple_ret.tir  sub.tir  tbz.tir
tpde/test/filetest/tir/: add.tir  alloca_align.tir  br.tir  call.tir  duplicate_funcs.tir  func.tir  simple.tir
utils/: ci-Dockerfile  coverage.sh
